hphp/hack/test/enum_class/typing/typing.extends2.bad.php.exp
File "typing.extends2.bad.php", line 20, characters 12-12:
Enum X includes C which is not an enum (Typing[4388])
File "typing.extends2.bad.php", line 20, characters 12-12:
Enum classes can only extend other enum classes. (Typing[4115])
  File "typing.extends2.bad.php", line 20, characters 29-29:
  This is a class.
